# custom-editor

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  file
include/: editor.h  file_operations.h  terminal.h
src/: CMakeLists.txt  editor.cpp  file_operations.cpp  main.cpp  terminal.cpp
